refactor: overall changes (#84)
* refactor: remove auth dependency from handlers

* refactor: remove empty line and replace err with nil value from auth

* refactor: change version of checkout in ci workflow

* refactor: move logout endpoint under auth middleware

* refactor: move health endpoint under rate limiter middleware

* refactor: small changes in docs
